# pokedbmaker

./: .gitignore  Pokemon.db  README.md  config.py  pokedex_creator.py  pyproject.toml  shell.nix
pokedbmaker/: __main__.py  commands.py  fixes.py  pokedex_creator.py
pokedbmaker.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
